added exclusive dependencies metric

--- a/templates/list.html
+++ b/templates/list.html
@@ -117,7 +117,7 @@
         </div>
     </header>
     <div class="container">
-        <p>This page was generated with <a href="https://github.com/mimoo/cargo-dephell">cargo dephell</a>. It lists the dependencies used by {{ path }}.</p>
+        <p>This page was generated with <a href="https://github.com/mimoo/cargo-dephell">cargo dephell</a>. It lists the dependencies used by {{ path }}. For more information about the methodology check the <a href="https://github.com/mimoo/cargo-dephell">README</a>.</p>
         <nav>
             
         </nav>
