--- a/templates/list.html
+++ b/templates/list.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away.css">
     <!-- custom -->
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Roboto:200,400,700&display=swap');
 
         * {
             font-family: Roboto;
@@ -56,18 +56,28 @@
 
         th {
             padding: 10px;
+            font-size:15px;
+            font-weight:200;
         }
 
         th a {
             color: white;
+            text-decoration: none;
         }
 
         tr:nth-child(even) {
             background-color: #f8f6ff;
         }
 
+        td {
+            font-weight: 200;
+            font-size: 15px;
+        }
+
         td a {
             color:black;
+            text-decoration:none;
+            border-bottom:1px solid black;
         }
 
         td:first-child {
@@ -117,7 +127,7 @@
         </div>
     </header>
     <div class="container">
-        <p>This page was generated with <a href="https://github.com/mimoo/cargo-dephell">cargo dephell</a>. It lists the dependencies used by {{ path }}. For more information about the methodology check the <a href="https://github.com/mimoo/cargo-dephell">README</a>.</p>
+        <p>This page was generated with <a href="https://github.com/mimoo/cargo-dephell">cargo dephell</a>. It lists the dependencies used by <strong>{{ name }}</strong>. For more information about the methodology check the <a href="https://github.com/mimoo/cargo-dephell">README</a>.</p>
         <nav>
             
         </nav>
@@ -192,6 +202,39 @@
         // TODO: compress/uncompress the JSON?
 
         //
+        // metric functions
+        //
+
+        weights = {
+            'transitive_dependencies': 5,
+            'total_third_deps': 1,
+            'root_importers': 1,
+            'exclusive_deps_introduced': 5,
+            'non_rust_loc': 1,
+            'rust_loc': 5,
+            'unsafe_loc': 1,
+            'stargazers_count': 1
+        };
+
+        // TODO: this doesn't use total LOCs atm
+        function calculate_risk(package_id) {
+            let package_risk = analysis_result[package_id];
+            let risk_score = 0;
+            for (metric of ['transitive_dependencies', 'total_third_deps', 'root_importers', 'exclusive_deps_introduced', 'non_rust_loc', 'rust_loc', 'unsafe_loc', 'stargazers_count']) {
+                let actual_number = package_risk[metric];
+                if (Array.isArray(actual_number)) {
+                    actual_number = actual_number.length;
+                }
+                risk_score += weights[metric] * actual_number;
+            }
+            return risk_score;
+        }
+
+        function calculate_total_loc(package_id) {
+
+        }
+
+        //
         // function to modify the table
         //
 
@@ -200,6 +243,8 @@
         }
 
         function display_packages(package_ids) {
+            // clean
+            clean_table();
             // update state
             current_packages = package_ids;
             // display
@@ -233,11 +278,42 @@
         // -------------
         //
 
-        function nav_click(dep_name) {
-            // TODO: add links for quick access
-            nav += " > " + dep_name;
+        let nav_home = '<a href="#home" class="dep_nav"><i class="fas fa-home"></i> {{name}}</a>'; 
+        let nav_rest = [];
+
+        function refresh_nav() {    
+            let nav = nav_home;
+            for (const [idx, dep_id] of nav_rest.entries()) {
+                let dep_name = analysis_result[dep_id]["name"];
+                nav += ' <i class="fas fa-caret-right"></i> <a href="#'+idx+'" class="dep_nav">' + dep_name + '</a>';
+            }
             document.querySelector("nav").innerHTML = nav;
         }
+
+        function nav_click(dep_id) {
+            nav_rest.push(dep_id);
+            refresh_nav();
+        }
+
+        document.querySelector("nav").addEventListener("click", (event) => {
+            if (event.target && event.target.className != "dep_nav") {
+                return;
+            }
+            // which element in the array
+            let idx = event.target.getAttribute("href").slice(1);
+            if (idx == "home") {
+                nav_rest = [];
+                display_packages(main_dependencies);
+            } else {
+                let package_id = nav_rest[idx];
+                nav_rest = nav_rest.slice(0, idx + 1);
+                display_packages(analysis_result[package_id]["transitive_dependencies"]);
+            }
+            // refresh nav
+            refresh_nav();
+            //
+            event.preventDefault();
+        });
 
         //
         // init
@@ -247,11 +323,11 @@
         let {main_dependencies, analysis_result} = JSON.parse('{{ json_result }}');
 
         // display main dependencies
-        let nav = "workspace";
         let current_packages = main_dependencies;
-        for (main_dependency of main_dependencies) {
-            display_package(main_dependency);
-        }
+        display_packages(main_dependencies);
+
+        // display nav
+        refresh_nav();
 
         //
         // clicking on dependencies
@@ -267,8 +343,7 @@
             let package_id = event.target.getAttribute("href");
             // refresh
             reset_sort_icons();
-            nav_click(package_name);
-            clean_table();
+            nav_click(package_id);
             display_packages(analysis_result[package_id]["transitive_dependencies"]);
             //
             event.preventDefault();
@@ -288,7 +363,6 @@
         }
         
         function sort_click(event) {
-            console.log(event);
             // get info
             let to_sort = event.target.getAttribute("href").slice(1); // get rid of "#..."
             // figure out how to sort
@@ -324,7 +398,6 @@
                 });
             }
             // refresh table
-            clean_table();
             display_packages(current_packages);
             //
             event.preventDefault();
