trying a different technique: just read whatever .d file is created by cargo build

--- a/templates/list.html
+++ b/templates/list.html
@@ -52,6 +52,10 @@
             background-color:cornsilk;
         }
 
+        #jumbotron a {
+            color:black;
+        }
+
         table {
             border-collapse: collapse;
             width: 100%;
@@ -140,7 +144,10 @@
         </div>
     </header>
     <div class="container">
-        <p id="jumbotron">This page was generated with <a href="https://github.com/mimoo/cargo-dephell">cargo dephell</a>. It lists the dependencies used by <strong>{{ name }}</strong>. For more information about the methodology check the <a href="https://github.com/mimoo/cargo-dephell">README</a>.</p>
+        <p id="jumbotron">
+            This page was generated with <a href="https://github.com/mimoo/cargo-dephell">cargo dephell</a>. It lists the dependencies used by <strong>{{ name }}</strong>.<br>
+            For more information about the methodology check the <a href="https://github.com/mimoo/cargo-dephell">README</a>.
+        </p>
         <nav>
             
         </nav>
